--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Yuki Kurata <yuki.kurata@gmail.com>",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
