--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-	"presets": ["@babel/preset-env"]
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "ie": 11
+      },
+      "corejs": 3,
+      "useBuiltIns": "usage"
+    }]
+  ]
 }
