--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/register": "^7.4.0",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
+    "core-js": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-uglify": "^3.0.2",
     "vinyl-buffer": "^1.0.1",
