--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "main": "lib/koyomi.js",
   "version": "0.5.3",
   "scripts": {
+    "build": "gulp build",
     "test": "node ./test/test.js"
   },
   "directories": {},
